# 42sh

./: AUTHORS  README.md  clear.sh  configure.ac  make.sh
src/: 42sh.c  Makefile.am  exec_main.c  exec_main.h
src/ast/: Makefile.am  ast.c  ast.h  ast_exec.c  ast_exec.h  command.c  command.h
src/builtins/: Makefile.am  builtins.c  builtins.h  builtins_next.c  builtins_next.h  builtins_next2.c  builtins_next2.h  utils.c  utils.h
src/fonctions/: Makefile.am  fonction.c  fonction.h
src/io_backend/: Makefile.am  io_backend.c  io_backend.h
src/lexer/: Makefile.am  lexer.c  lexer.h  process_lexer.c  process_lexer.h  token.c  token.h  utils_lexer.c  utils_lexer.h
src/parser/: Makefile.am  grammar.c  grammar.h  grammar_case.c  grammar_case.h  grammar_shell.c  grammar_shell.h  parser.c  parser.h  utils.c  utils.h  utils_case.c  utils_case.h  utils_shell.c  utils_shell.h
src/redirs/: Makefile.am  redirs.c  redirs.h
src/variables/: Makefile.am  variables.c  variables.h
tests/: Makefile.am  Makefile.in  cland-tidy.py  test.py
tests/scripts/: dot.sh  echo_escaped.sh  export_unset.sh  functions.sh  funny_escaped.sh  if_quoted_keyword.sh  many_redirections.sh  spaces.sh  tricky_echo.sh  variables.sh
tests/tests/: ACCEPT.yml  ALIAS.yml  BUILTINS.yml  CASE.yml  COMMAND_SUB_AND_IFS.yml  FOR.yml  IF.yml  PIPE.yml  REDIRECT.yml  REJECT.yml  SCRIPTS.yml  SPECIALS.yml
